--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ mediapipe==0.10.14
 numpy==1.26.4
 opencv-python-headless==4.10.0.84
 pyttsx3==2.90
+scikit-learn==1.5.0
 streamlit==1.35.0
 streamlit-webrtc==0.47.7
