--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-av==12.1.0
-mediapipe==0.10.14
+aioice==0.9.0
+aiortc==1.9.0
+streamlit==1.31.1
+opencv-python-headless==4.7.0.72
 numpy==1.26.4
-opencv-python-headless==4.10.0.84
-pyttsx3==2.90
-scikit-learn==1.5.0
-streamlit==1.35.0
+mediapipe==0.10.14
+scikit-learn==1.2.0
 streamlit-webrtc==0.47.7
+pyttsx3==2.90
+av==12.1.0
